# py-vibe-sigridjineth-template

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrefly.toml
.github/workflows/: ci.yml
tests/: test_makefile.py
