[project]
name = "python-starter-template"
version = "0.1.0"
description = "A Python FastAPI template for rapid development with modern tooling and best practices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-python-dateutil>=2.9.0.20250809",
    "pytest>=8.4.1",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "main.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
